--- a/templates/login.html
+++ b/templates/login.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LegoProxy Login</title>
-  <link rel="stylesheet" href="static/style.css">
+    <title>LegoProxy</title>
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <div style="height: 215px;"><img src="https://cdn.discordapp.com/attachments/1056074242325741578/1056074861690224720/legoproxy.png" alt="LegoProxy"></div>
 <body style="background-color: #333333;">
-  <form class="login-form" method="post" action="/", style="width: 500px; height: center;">
-    <h4 style="color: #555555; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">LegoProxy Version 1.5 unstable</h4>
-    <div class="form-row">
-      <input type="text" id="username" name="username" placeholder="Username">
-    </div>
-    <div class="form-row">
-      <input type="password" id="password" name="password" placeholder="Password">
-    </div>
-    <input type="submit" value="Login">
-  </form> 
+  	<form class="login-form" method="post" action="/", style="width: 500px; height: center;">
+  	  	<h3 style="color: #fff; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">LegoProxy v1.5 unstable</h3>
+  	  	<div class="form-row">
+  	  	  	<input type="text" id="username" name="username" placeholder="LegoProxy Username">
+  	  	</div>
+  	  	<div class="form-row">
+  	  	  	<input type="password" id="password" name="password" placeholder="LegoProxy Password">
+  	  	</div>
+  	  	<input type="submit" value="Login">
+  	</form> 
 </body>
 </html>
