--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 <div style="height: 215px;"><img src="https://cdn.discordapp.com/attachments/1056074242325741578/1056074861690224720/legoproxy.png" alt="LegoProxy"></div>
 <body style="background-color: #333333;">
 	<form class="login-form" method="post" action="/", style="width: 500px; height: center;">
-		<h3 style="color: #fff; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">LegoProxy v1.5 unstable</h3>
+		<h3 style="color: #fff; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">LegoProxy v1.5</h3>
 		<div class="form-row">
 			<input type="text" id="username" name="username" placeholder="LegoProxy Username">
 		</div>
