--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>LegoProxy</title>
+    <title>LegoProxy Login</title>
     <link rel="stylesheet" href="static/style.css">
 </head>
 <div style="height: 215px;"><img src="https://cdn.discordapp.com/attachments/1056074242325741578/1056074861690224720/legoproxy.png" alt="LegoProxy"></div>
