--- a/templates/login.html
+++ b/templates/login.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>LegoProxy Login</title>
-    <link rel="stylesheet" href="static/style.css">
+    <title>LegoProxy Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="static/style.css">
 </head>
-<div style="height: 215px;"><img src="https://cdn.discordapp.com/attachments/1056074242325741578/1056074861690224720/legoproxy.png" alt="LegoProxy"></div>
-<body style="background-color: #333333;">
-	<form class="login-form" method="post" action="/", style="width: 500px; height: center;">
-		<h3 style="color: #fff; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">LegoProxy v1.5</h3>
-		<div class="form-row">
-			<input type="text" id="username" name="username" placeholder="LegoProxy Username">
+<body>
+    <div style="top: 50%; left: 50%; position: fixed; transform: translate(-50%, -50%);">
+		<form class="container" method="post" action="/">
+			<div style="text-align: center;">
+				<img src="https://cdn.discordapp.com/attachments/1056074242325741578/1056074861690224720/legoproxy.png" alt="LegoProxy"><br>
+				<text style="font-size: 50px;"><text style="font-size: 50px; color: #75b2eb;">Lego</text><text style="font-size: 50px; color: #87d997;">Proxy</text> Dashboard</text><br>
+				<text style="font-size: 20px;">Running LegoProxy v1.6</text>
+			</div>
+	
+			<div style="text-align: center; align-items: center;"><br>
+				<input type="text" id="username" name="username" style="border-radius: 5px; height: 30px; width: 100%;" placeholder="LegoProxy Username"></input><br><br>
+				<input type="password" id="password" name="password" style="border-radius: 5px; height: 30px; width: 100%;" placeholder="LegoProxy Password"></input><br><br>
+				<button type="green" style="height: 45px; width: 101%;">Login</button><br><br>
+			</div>
+		</form>
+
+		<div class="container" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px 20px;">
+			<button style="height: 25px; width: 102%;" onclick="location.href='/docs'">Documentation</button>
+			<button style="height: 25px; width: 102%;" onclick="location.href='https://discord.gg/SnmVQ4NSTz'">Discord</button>
 		</div>
-		<div class="form-row">
-			<input type="password" id="password" name="password" placeholder="LegoProxy Password">
-		</div>
-		<input type="submit" value="Login">
-	</form> 
+    </div>
 </body>
 </html>
