--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,63 +1,89 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>LegoProxy Dashboard</title>
-  <link rel="stylesheet" href="static/style.css">
+    <title>LegoProxy Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="static/style.css">
 </head>
-<body style="background-color: #333;">
-	<div class="dashboard">
-	 	<div class="configuration">
-	 	 	<h1 style="color: white; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Proxy Configuration</h1>
-	 	 	<form action="/saveconf" method="post">
-	 	 	 	<div class="form-row">
-	 	 	 	  <input type="number" id="placeId" name="placeId" placeholder="Roblox Place ID">
-	 	 	 	</div>
-	 	 	 	<div class="form-row">
-	 	 	 	  	<input type="number" id="maxRequests" name="maxRequests" placeholder="Max Proxy Requests">
-	 	 	 	</div>
-	 	 	 	<div class="form-row">
-	 	 	 	  	<input type="text" id="proxyAuthKey" name="proxyAuthKey" placeholder="Proxy Authentication Key">
-	 	 	 	</div>
-			<div class="form-row">
-				<input type="text" id="username" name="username" placeholder="LegoProxy Username">
-				<input type="password" id="password" name="password" placeholder="LegoProxy Password">
-			</div>
-	 	 	 	<div class="form-row">
-	 	 	 	  	<input type="submit" value="Save Changes">
-	 	 	 	</div>
-	 	 	</form>
-	 	</div>
-	 	<div class="logs">
-	 	  	<h1 style="color: white; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Request Logs</h1>
-	 	  	<div id="logs-box">
-				<textarea id="logs" readonly style="resize: none; width: 500px; height: 250px; white-space: pre-line;"></textarea>
-	 	  	</div>
-	  	</div>
-	</div>
-	<script>
-		let latestLogs = "";
-		const logsTextarea = document.getElementById('logs');
-		
-		setInterval(() => {
-			fetch('/logs')
-			 	.then(response => response.text())
-			 	.then(logs => {
-			 	 	if (logs !== latestLogs) {
-			 	 		latestLogs = logs;
+<style>
 
-						if (logs !== ""){
-							logsTextarea.innerHTML += logs + "\n";
-						}
-					
-			 	 		const isScrollingUp = logsTextarea.scrollTop < logsTextarea.scrollHeight - logsTextarea.clientHeight;
-					
-			 	 		if (isScrollingUp) {
-			 	 		  logsTextarea.scrollTop = logsTextarea.scrollHeight;
-			 	 		}
-			 	 	}
-			 	});
-		}, 1000);
+</style>
+<body>
+    <div style="margin-top: 50px; margin-left: auto; margin-right: auto; width: 70%;">
+		<div class="container" style="display: grid; grid-template-columns: 1fr 0.5fr 0.1fr;">
+			<text style="font-size: 50px;"><text style="font-size: 50px; color: #75b2eb;">Lego</text><text style="font-size: 50px; color: #87d997;">Proxy</text> Dashboard</text>
+			<text style="text-align: left; font-size: 25px;">Logged in as:<br><text id="username" name="username" style="color: #87d997;"></text></text>
+			<button type="red" style="height: 50px; width: 150px;" onclick="location.href='/logout'">Log Out</button>
+		</div>
+
+		<div class="container" style="margin-top: 30px; display: grid; grid-template-columns: 1fr 1fr; gap: 20px 20px;">
+			<div class="container">
+				<text style="font-size: 30px;">Proxy Configuration</text><br><br>
+				<input type="number" id="placeId" name="placeId" style="border-radius: 5px; height: 25px; width: 100%;" placeholder="Roblox Place ID"></input><br><br>
+				<input type="number" id="maxRequests" name="maxRequests" style="border-radius: 5px; height: 25px; width: 100%;" placeholder="Max Proxy Requests (per second | 75< ~ 200)"></input><br><br>
+				<input type="number" id="cacheExpiry" name="cacheExpiry" style="border-radius: 5px; height: 25px; width: 100%;" placeholder="Cache Expiry (seconds)"></input><br><br>
+				<input type="text" id="proxyAuth" name="proxyAuth" style="border-radius: 5px; height: 25px; width: 100%;" placeholder="Proxy Authentication Key"></input><br><br>
+			</div>
+
+			<div class="container">
+				<text style="font-size: 30px;">Latest Log</text><br><br>
+				<text style="font-size: 25px;">Total Proxy Requests (S / F): 0 / 0</text><br>
+				<text style="font-size: 25px;">Returned Cache: 0</text><br>
+
+			</div>
+			
+		</div><br><br>
+		<button type="green" style="height: 45px; width: 100%;" onclick="saveConfiguration()">Save Changes</button><br><br>
+		<div class="container" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px 20px;">
+			<button style="height: 25px; width: 100%;" onclick="location.href='/docs'">Documentation</button>
+			<button style="height: 25px; width: 100%;" onclick="location.href='https://discord.gg/SnmVQ4NSTz'">Discord</button>
+		</div>
+	</div>
+
+	<script>
+		function saveConfiguration() {
+		 	const placeId = document.getElementById('placeId').value;
+		 	const maxRequests = document.getElementById('maxRequests').value;
+		 	const proxyAuth = document.getElementById('proxyAuth').value;
+		 	const cacheExpiry = document.getElementById('cacheExpiry').value;
+
+		 	fetch('/saveconf', {
+		 	 	method: 'POST',
+		 	 	headers: {
+		 	 	  'Content-Type': 'application/json'
+		 	 	},
+		 	 	body: JSON.stringify({
+					placeId: Number(placeId),
+					maxRequests: Number(maxRequests),
+					proxyAuthKey: proxyAuth,
+					cacheExpiry: Number(cacheExpiry)
+					})
+		 	})
+		 	.then(response => response.json())
+		 	.then(data => console.log(data))
+		 	.catch(error => console.error(error));
+		}
+
+		function getCookie(name) {
+		  	var value = "; " + document.cookie;
+		  	var parts = value.split("; " + name + "=");
+		  	if (parts.length == 2) return parts.pop().split(";").shift();
+		}
+
+		window.onload = function(){
+			document.getElementById("username").innerHTML = getCookie("legoproxy_username");
+
+			fetch("/getconf")
+    		.then(response => response.json())
+    		.then(data => {
+    		  document.getElementById("placeId").value = data.placeId;
+    		  document.getElementById("maxRequests").value = data.maxRequests;
+    		  document.getElementById("cacheExpiry").value = data.cacheExpiry;
+    		  document.getElementById("proxyAuth").value = data.proxyAuth !== undefined ? value : "";
+    		})
+    		.catch(error => console.error(error));
+		}
+
 	</script>
+
 </body>
 </html>
