--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 			<div style="text-align: center;">
 				<img src="https://cdn.discordapp.com/attachments/1056074242325741578/1056074861690224720/legoproxy.png" alt="LegoProxy"><br>
 				<text style="font-size: 50px;"><text style="font-size: 50px; color: #75b2eb;">Lego</text><text style="font-size: 50px; color: #87d997;">Proxy</text> Dashboard</text><br>
-				<text style="font-size: 20px;">Running LegoProxy v1.6</text>
+				<text style="font-size: 20px;">Running LegoProxy v1.6a</text>
 			</div>
 	
 			<div style="text-align: center; align-items: center;"><br>
